[gd_scene load_steps=5 format=3 uid="uid://bllxfiqj2rhk7"]

[ext_resource type="Script" uid="uid://1nj4k1jf6ttk" path="res://demo/Scenes/slot.gd" id="1_b6mnt"]
[ext_resource type="Texture2D" uid="uid://bg5jrg3nctcs4" path="res://demo/assets/tile_0013.png" id="1_m4u8r"]
[ext_resource type="FontFile" uid="uid://0dxrlodpwin3" path="res://demo/assets/font/Jersey10-Regular.ttf" id="3_b6mnt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m4u8r"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("1_m4u8r")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0

[node name="Slot" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
offset_right = 66.0
offset_bottom = 66.0
theme_override_styles/panel = SubResource("StyleBoxTexture_m4u8r")
script = ExtResource("1_b6mnt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="IconTexture" type="TextureRect" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_b6mnt")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
